# NES-C

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml
src/: apu.c  apu.h  audio.c  audio.h  buffer.c  buffer.h  color.c  color.h  controller.c  controller.h  cpu.c  cpu.h  cpu_bus.c  cpu_bus.h  display.c  display.h  emulator.c  emulator.h  emunes.c  emunes.h  init.c  init.h  input.c  input.h  interrupt.c  interrupt.h  io.c  io.h  mapper.c  mapper.h  memory.c  memory.h  nes.c  nes.h  opcode.h  ops.c  ops.h  ppu.c  ppu.h  ppu_bus.c  (+5 more)
src/mappers/: mmc1.c  mmc1.h  nrom.c  nrom.h
tests/: CMakeLists.txt
tests/src/: buffer-test.c  cpu-memory-test.c  cpu-test.c  ctest.h  memory-test.c  ppu-memory-test.c  ppu-test.c
